0.7.0 - fixes moar z-index issues

--- a/app-layout-addon/src/main/webapp/VAADIN/addons/app-layout/variants/left-navigation-drawer-responsive-small.scss
+++ b/app-layout-addon/src/main/webapp/VAADIN/addons/app-layout/variants/left-navigation-drawer-responsive-small.scss
@@ -23,7 +23,7 @@
         color: $app-bar-font-color !important;
       }
       padding-right: 0px;
-      z-index: 2;
+      z-index: $z-index + 1;
     }
     .drawer-content {
       margin-top: 64px;
