--- a/app-layout-addon/src/main/webapp/VAADIN/addons/app-layout/variants/left-navigation-drawer-responsive.scss
+++ b/app-layout-addon/src/main/webapp/VAADIN/addons/app-layout/variants/left-navigation-drawer-responsive.scss
@@ -5,7 +5,7 @@
       color: $app-bar-font-color;
       box-shadow: $app-bar-shadow;
       position: relative;
-      z-index: 1;
+      z-index: $z-index + 1;
       .v-button {
         color: $app-bar-font-color !important;
       }
